[package]
name = "vsop87"
version = "2.1.0"
license = "MIT/Apache-2.0"
authors = ["Iban Eguia <razican@protonmail.ch>"]
edition = "2021"
rust-version = "1.63"
readme = "README.md"
repository = "https://github.com/Razican/vsop87-rs"
documentation = "https://docs.rs/vsop87/"
description = """
Pure Rust VSOP87 algorithm implementation. Includes all VSOP87 algorith versions:
VSOP87, VSOP87A, VSOP87B, VSOP87C, VSOP87D and VSOP87E.

VSOP87 are a family of algorithms used to predict the position of planets in the
solar system with great accuracy. That position can be used by astronomical
software to create views of the sky, or by simulation software to know the
position of the planets.
"""
keywords = ["vsop87", "simulation", "astrophysics", "astronomy"]
categories = ["science"]

[badges]
travis-ci = { repository = "Razican/vsop87-rs", branch = "master" }
codecov = { repository = "Razican/vsop87-rs", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "Razican/vsop87-rs" }
is-it-maintained-open-issues = { repository = "Razican/vsop87-rs" }

[features]
default = ["simd"]
no_std = ["libm"]
simd = []

[dependencies]
libm = { version = "0.2.1", optional = true }

[dev-dependencies]
rand = "0.7.3"
criterion = "0.3.3"

[[bench]]
name = "vsop87"
harness = false

[[bench]]
name = "vsop87a"
harness = false

[[bench]]
name = "vsop87b"
harness = false

[[bench]]
name = "vsop87c"
harness = false

[[bench]]
name = "vsop87d"
harness = false

[[bench]]
name = "vsop87e"
harness = false
